--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An application for dog walkers to find dogs that need walking",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "NODE_ENV=test node tests/tests.js | tap-spec",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "repository": {
     "type": "git",
