set up the server

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "An application for dog walkers to find dogs that need walking",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +24,7 @@
     "compression": "^1.7.1",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
+    "express-handlebars": "^3.0.0",
     "jsonwebtoken": "^8.1.0",
     "serve-favicon": "^2.4.5"
   },
