--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "jsonwebtoken": "^8.1.0",
     "pg": "^7.4.0",
     "serve-favicon": "^2.4.5"
