--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "express-validator": "^4.3.0",
     "jsonwebtoken": "^8.1.0",
     "pg": "^7.4.0",
     "serve-favicon": "^2.4.5"
