--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "testdb": "NODE_ENV=test node tests/testdb.js | tap-spec",
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "node ./src/index.js",
+    "dev": "nodemon ./src/index.js"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,9 @@
     "jsonwebtoken": "^8.1.0",
     "pg": "^7.4.0",
     "serve-favicon": "^2.4.5"
+  },
+  "engines": {
+    "node": "9.2.0"
   },
   "devDependencies": {
     "env2": "^2.2.0",
